# casper-sidecar

./: .gitignore  Cargo.toml  Dockerfile  EXAMPLE_CONFIG.toml  EXAMPLE_NCTL_CONFIG.toml  EXAMPLE_NCTL_POSTGRES_CONFIG.toml  EXAMPLE_NODE_CONFIG.toml  LEGACY_SSE_EMULATION.md  LICENSE  README.md  USAGE.md  clippy.toml  config.toml  config_perf_test.toml  config_test.toml  invalid_config.toml  rust-toolchain.toml  test.sh
binary_port/: Cargo.toml
binary_port/src/: binary_request.rs  binary_response.rs  entity_qualifier.rs  get_request.rs  lib.rs  record_id.rs  state_request.rs  type_wrappers.rs
casper_types/: Cargo.toml
event-listener/: Cargo.toml
event-listener/src/: lib.rs
event_sidecar/: Cargo.toml
event_sidecar/src/: admin_server.rs  api_version_manager.rs  event_handling_service.rs  event_stream_server.rs  lib.rs  main.rs  rest_server.rs  tests.rs  types.rs  utils.rs
event_sidecar/src/database/: database_errors.rs  errors.rs  migration_manager.rs  mod.rs  postgresql_database.rs  reader_generator.rs  sqlite_database.rs  tests.rs  types.rs  writer_generator.rs
event_sidecar/src/database/migration_manager/: tests.rs
event_sidecar/src/database/postgresql_database/: tests.rs  writer.rs
event_sidecar/src/database/sqlite_database/: reader.rs  tests.rs  writer.rs
event_sidecar/src/event_handling_service/: db_saving_event_handling_service.rs  no_db_event_handling_service.rs
event_sidecar/src/event_stream_server/: config.rs  endpoint.rs  event_indexer.rs  http_server.rs  sse_server.rs  tests.rs
event_sidecar/src/rest_server/: errors.rs  filters.rs  handlers.rs  metrics_layer.rs  openapi.rs  status.rs  tests.rs
event_sidecar/src/rest_server/openapi/: schema_transformation_visitor.rs
event_sidecar/src/sql/: tables.rs
event_sidecar/src/sql/tables/: block_added.rs  event_log.rs  event_type.rs  fault.rs  finality_signature.rs  shutdown.rs  step.rs  transaction_accepted.rs  transaction_event.rs  transaction_expired.rs  transaction_processed.rs  transaction_type.rs
event_sidecar/src/testing/: fake_database.rs  fake_event_stream.rs  mock_node.rs  raw_sse_events_utils.rs  shared.rs  simple_sse_server.rs  test_clock.rs  testing_config.rs
event_sidecar/src/tests/: integration_tests.rs  integration_tests_version_switch.rs  performance_tests.rs
event_sidecar/src/types/: config.rs  database.rs  sse_events.rs
json_rpc/: Cargo.toml  README.md
json_rpc/src/: error.rs  filters.rs  lib.rs  rejections.rs  request.rs  request_handlers.rs  response.rs
json_rpc/src/filters/tests/: base_filter_with_recovery_tests.rs
json_rpc/src/request/: params.rs
listener/: Cargo.toml
listener/src/: connection_manager.rs  connection_tasks.rs  connections_builder.rs  event_listener_status.rs  keep_alive_monitor.rs  lib.rs  sse_connector.rs  types.rs  utils.rs  version_fetcher.rs
metrics/: Cargo.toml  README.md
metrics/src/: db.rs  lib.rs  metrics.rs  rest_api.rs  rpc.rs  sse.rs
rpc_sidecar/: Cargo.toml  README.md  build.rs
rpc_sidecar/src/: config.rs  http_server.rs  lib.rs  limiter.rs  node_client.rs  rpcs.rs  speculative_exec_config.rs  speculative_exec_server.rs
rpc_sidecar/src/app/: main.rs
rpc_sidecar/src/rpcs/: account.rs  chain.rs  common.rs  docs.rs  error.rs  error_code.rs  info.rs  speculative_exec.rs  speculative_open_rpc_schema.rs  state.rs  state_get_auction_info_v2.rs  test_utils.rs  types.rs
rpc_sidecar/src/rpcs/chain/: era_summary.rs
rpc_sidecar/src/rpcs/state/: auction_state.rs
rpc_sidecar/src/testing/: mod.rs
sidecar/: Cargo.toml  config_perf_test.toml  config_test.toml
sidecar/src/: admin_server.rs  api_version_manager.rs  component.rs  config.rs  event_stream_server.rs  integration_tests.rs  integration_tests_version_switch.rs  main.rs  migration_manager.rs  performance_test_rest_server.rs  performance_tests.rs  rest_server.rs  run.rs  sql.rs  sqlite_database.rs  testing.rs  tests.rs  types.rs  utils.rs
sidecar/src/authorization/: layer.rs  mod.rs
sidecar/src/config/: speculative_exec_config.rs
sidecar/src/database/: USAGE.md  env_vars.rs  mod.rs  postgresql_database.rs  reader_generator.rs  sqlite_database.rs  tests.rs  types.rs  writer_generator.rs
sidecar/src/database/migration_manager/: tests.rs
sidecar/src/database/postgresql_database/: reader.rs  tests.rs  writer.rs
sidecar/src/database/sqlite_database/: reader.rs  tests.rs  writer.rs
sidecar/src/event_stream_server/: config.rs  endpoint.rs  event_indexer.rs  http_server.rs  sse_server.rs  tests.rs
sidecar/src/migration_manager/: tests.rs
sidecar/src/rest_server/: errors.rs  filters.rs  handlers.rs  openapi.rs  requests.rs  test_helpers.rs  tests.rs  tests_helpers.rs
sidecar/src/rest_server/openapi/: schema_transformation_visitor.rs
sidecar/src/sql/: backfill_pending_deploy_aggregations.rs  setup_aggregate_deploy_migration.rs  tables.rs
sidecar/src/sql/tables/: assemble_deploy_aggregate.rs  block_added.rs  block_deploys.rs  deploy_accepted.rs  deploy_aggregate.rs  deploy_event.rs  deploy_expired.rs  deploy_processed.rs  event_log.rs  event_type.rs  fault.rs  finality_signature.rs  migration.rs  pending_deploy_aggregations.rs  shutdown.rs  step.rs
sidecar/src/sqlite_database/: errors.rs  reader.rs  tests.rs  writer.rs
sidecar/src/testing/: fake_database.rs  fake_event_stream.rs  fake_event_stream_server.rs  graphing.rs  mock_database.rs  mock_node.rs  raw_sse_events_utils.rs  shared.rs  simple_sse_server.rs  simple_sse_server_2.rs  testing_config.rs
sidecar/src/tests/: integration_tests.rs  integration_tests_version_switch.rs  lib.rs  performance_tests.rs
sidecar/src/types/: config.rs  database.rs  job.rs  sse_events.rs  transaction.rs
src/: database.rs  (+10 more)
types/: Cargo.toml
types/src/: block.rs  deploy.rs  digest.rs  executable_deploy_item.rs  filter.rs  lib.rs  metrics.rs  sse_data.rs  sse_data_1_0_0.rs  testing.rs  validation.rs
types/src/block/: v1.rs
types/src/legacy_sse_data/: fixtures.rs  mod.rs  structs.rs  translate_block_added.rs  translate_deploy_hashes.rs  translate_execution_result.rs
types/src/node/: block.rs  deploy.rs  mod.rs
(+99 files in other folders)
