[workspace]
resolver = "1"
members = [
    "event_sidecar",
    "json_rpc",
    "listener",
    "metrics",
    "rpc_sidecar",
    "sidecar",
    "types",
]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3.4"
async-trait = "0.1.77"
casper-types = { git = "https://github.com/jacek-casper/casper-node.git", branch = "add-version-to-status" }
casper-binary-port = { git = "https://github.com/jacek-casper/casper-node.git", branch = "add-version-to-status" }
casper-event-sidecar = { path = "./event_sidecar", version = "1.0.0" }
casper-event-types = { path = "./types", version = "1.0.0" }
casper-rpc-sidecar = { path = "./rpc_sidecar", version = "1.0.0" }
datasize = "0.2.11"
futures = "0"
futures-util = "0.3.28"
itertools = "0.10.3"
metrics = { path = "./metrics", version = "1.0.0" }
once_cell = "1.18.0"
thiserror = "1"
tokio = "1.23.1"
toml = "0.5.8"
tracing = { version = "0", default-features = false }
tracing-subscriber = "0"
serde = { version = "1", default-features = false }
