[workspace]
resolver = "1"
members = [
    "event_sidecar",
    "json_rpc",
    "listener",
    "metrics",
    "rpc_sidecar",
    "sidecar",
    "types",
]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "dev", features = [
    "json-schema",
] }
casper-binary-port = { git = "https://github.com/casper-network/casper-node.git", branch = "dev" }
casper-event-sidecar = { path = "./event_sidecar", version = "1.0.0" }
casper-event-types = { path = "./types", version = "1.0.0" }
casper-rpc-sidecar = { path = "./rpc_sidecar", version = "1.0.0" }
datasize = "0.2"
futures = "0"
futures-util = "0.3"
itertools = "0.14"
jsonschema = "0.28"
metrics = { path = "./metrics", version = "1.0.0" }
once_cell = "1.20"
serde = { version = "1", default-features = false }
thiserror = "1"
tokio = "1"
toml = "0.8"
tracing = { version = "0", default-features = false }
tracing-subscriber = "0"
