[package]
name = "casper-event-listener"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.0"
casper-event-types = { path = "../types", version = "1.0.0" }
casper-types = { version = "3.0.0", features = ["std"] }
eventsource-stream = "0.2.3"
futures = "0.3.24"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
tracing = "0.1"
url = "2.3.1"

[dev-dependencies]
casper-event-types = { path = "../types", version = "1.0.0", features = ["sse-data-testing"]}