[package]
name = "casper-event-listener"
version = "1.0.0"
edition = "2021"
description = "Event listener for casper-event-listener library"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/CasperLabs/event-sidecar"
repository = "https://github.com/CasperLabs/event-sidecar"

[dependencies]
anyhow = "1.0.65"
async-stream = { workspace = true }
async-trait = "0.1.72"
bytes = "1.2.0"
casper-event-types = { path = "../types", version = "1.0.0" }
casper-types = { version = "3.0.0", features = ["std"] }
eventsource-stream = "0.2.3"
futures = "0.3.24"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
tokio-util = "0.7.8"
tracing = "0.1"
url = "2.3.1"
once_cell = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
casper-event-types = { path = "../types", version = "1.0.0", features = ["sse-data-testing"]}
eventsource-stream = "0.2.3"
mockito = "1.2.0"
portpicker = "0.1.1"
warp = { version = "0.3.6"}
