[package]
name = "metrics"
authors = ["Jakub Zajkowski <jakub@casperlabs.io>"]
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "Lib aggregating metrics for casper-sidecar"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/casper-network/casper-sidecar/"
repository = "https://github.com/casper-network/casper-sidecar/"

[dependencies]
once_cell = { workspace = true }
prometheus = { version = "0.13.3", features = ["process"] }