[package]
name = "casper-sidecar"
version = "1.0.0"
authors = ["Jakub Zajkowski <jakub@casperlabs.io>"]
edition = "2021"
description = "Base module that spins up casper sidecar"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-network/casper-sidecar/tree/dev"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
backtrace = "0.3.69"
casper-event-sidecar = { workspace = true }
casper-event-types = { workspace = true }
casper-rpc-sidecar = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
datasize = { workspace = true, features = ["detailed", "fake_clock-types"] }
futures = { workspace = true }
num_cpus = "1"
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
thiserror = { workspace = true }
derive-new = "0.6.0"
async-trait = { workspace = true }

[dev-dependencies]
casper-event-sidecar = { workspace = true, features = ["testing"] }
casper-rpc-sidecar = { workspace = true, features = ["testing"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[package.metadata.deb]
revision = "0"
assets = [
    ["../target/release/casper-sidecar", "/usr/bin/casper-sidecar", "755"],
    ["../resources/ETC_README.md", "/etc/casper-sidecar/README.md", "644"],
    ["../resources/example_configs/default_rpc_only_config.toml", "/etc/casper-sidecar/config.toml", "644"]
]
maintainer-scripts = "../resources/maintainer_scripts/debian"
extended-description = """
Package for Casper Event Sidecar
"""

[package.metadata.deb.systemd-units]
unit-scripts = "../resources/maintainer_scripts/casper_sidecar"
restart-after-upgrade = true

[package.metadata.deb.variants.bionic]
name = "casper-sidecar"
revision = "0+bionic"

[package.metadata.deb.variants.focal]
name = "casper-sidecar"
revision = "0+focal"
