[package]
name = "casper-event-types"
version = "0.1.1"
edition = "2021"
description = "Types for casper-event-listener library"
license = ""
license-file = ""
documentation = "README.md"
homepage = "" 
repository = "https://github.com/CasperLabs/event-sidecar"

[dependencies]
blake2 = { version = "0.9.0", optional = true }
casper-types = { version = "2.0.0", features = ["std"] }
hex-buffer-serde = "0.3.0"
hex_fmt = "0.3.0"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"]}
rand = { version = "0.8.5", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = {version = "1.0", features = ["raw_value"]}
thiserror = "1.0.39"

[features]
sse-data-testing = ["blake2", "casper-types/testing", "rand"]
