[package]
name = "casper-event-types"
version = "1.0.0"
edition = "2021"
description = "Types for casper-event-listener library"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/CasperLabs/event-sidecar" 
repository = "https://github.com/CasperLabs/event-sidecar"

[dependencies]
base16 = "0.2.1"
blake2 = { version = "0.9.0", optional = true }
casper-types = { version = "3.0.0", features = ["std"] }
hex-buffer-serde = "0.3.0"
hex_fmt = "0.3.0"
once_cell = "1.18.0"
prometheus = { version = "0.13.3", features = ["process"]}
rand = { version = "0.8.5", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"] }
thiserror = "1.0.39"
utoipa = { version = "3.4.4", features = ["rc_schema"]}

[features]
sse-data-testing = ["blake2", "casper-types/testing", "rand"]
additional-metrics = []
