[package]
name = "casper-event-types"
version = "1.0.0"
edition = "2021"
description = "Types for casper-event-listener library"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/casper-network/casper-sidecar/" 
repository = "https://github.com/casper-network/casper-sidecar/"

[dependencies]
base16 = "0.2.1"
blake2 = { version = "0.9.0", optional = true }
casper-types = { workspace = true, features = ["std"], git = "https://github.com/darthsiroftardis/casper-node.git" , branch = "fix-block-vacancy-bug"}
hex-buffer-serde = "0.3.0"
hex_fmt = "0.3.0"
itertools = { workspace = true }
mockall = "0.12.1"
once_cell = { workspace = true }
pretty_assertions = "1.4.0"
rand = { version = "0.8.5", optional = true }
serde = { workspace = true, default-features = true, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"] }
thiserror = { workspace = true }
utoipa = { version = "4", features = ["rc_schema"] }

[features]
sse-data-testing = ["blake2", "casper-types/testing", "rand"]
additional-metrics = []

[dev-dependencies]
casper-types = { workspace = true, features = ["std", "testing"] }
rand = "0.8.3"
